--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,5 @@ jobs:
           heroku_app_name: "fullstack-pokedex-sc"
           heroku_email: "stiven.cabrera3@gmail.com"
           healthcheck: "https://fullstack-pokedex-sc.herokuapp.com/health"
+          checkstring: "ok"
+          rollbackonhealthcheckfailed: true
